score formula edited for users with less than 100 fans fixed overflow in userlist for users with long usernames

--- a/plug_essential.css
+++ b/plug_essential.css
@@ -109,7 +109,7 @@
 .pe_user-cell-name {
     padding: 0;
     max-width: 160px;
-    overflow-x: hidden;    
+    overflow: hidden;
 }
 
 .pe_user-cell-extra {
